Bug and spacing fixes.

--- a/style.css
+++ b/style.css
@@ -412,6 +412,7 @@ hr {
 	width: 95%;
 	color: white;
 	margin: auto;
+	padding-bottom: 35px;
 }
 header {
 	padding: 0 15px;
